# EXTRAORDINARIA-CorporateWebsite

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  00-LEIA-PRIMEIRO.txt  ADMIN-DASHBOARD-SECRETO-CEO-ONLY.md  BOTGPT-PLANO-30-DIAS-MONETIZAR.md  BOTGPT-PLANO-30-DIAS.md  CHECKLIST-DEPLOY-PRODUCAO.md  CODE_OF_CONDUCT.md  COMECE-AQUI-AGORA.md  COMECE-AQUI.md  CONTRIBUTING.md  COPIAR-E-COLAR-LANÇAR.md  DEPLOY-COMPLETO-SUCESSO.md  DEPLOY_GUIDE.md  Dockerfile  EXECUCAO-AUTOMATICA-100-CONCLUIDA.md  EXTRAORDINARIA-PLANO-EXECUTIVO.md  EXTRAORDINARIA-PRINCIPAL-DEPLOY.md  EXTRAORDINARIA-SITE-PRONTO-LANÇAR.md  EXTRAORDINARIA-SITE-UNIFICADO-ONLINE.md  Extraordinaria.ai.sln  GUIA-CEO-DASHBOARD.md  GUIA-RAPIDO-COMANDOS.md  INDICE-DOCUMENTACAO.md  JAVA-21-UPGRADE-REPORT.md  JAVA-21-VERIFICATION.md  LANÇAR-AGORA.ps1  LINK-PUBLICO-URGENTE.md  MELHORIAS-CRITICAS-RAPIDAS.md  PLANO-EXTRAORDINARIA-COMPLETO.md  PROJETO-COMPLETO-RESUMO.md  PROJETO-ENTREGUE-E-FINALIZADO.md  README-DEV.md  README-PYTHON-COMPLETO.md  README.md  README_AUTOMATION.md  README_COMPOSE.md  (+37 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
extraordinaria_site/: .htaccess  BEM-VINDO.txt  CHECKLIST.md  COMECE-AGORA.md  COMPARTILHAR-COM-CLIENTES.txt  DESIGN-V3-FIGMA.md  EXECUCAO-COMPLETA-STATUS.md  GUIA-COMPLETO-SITE-CORPORATIVO.txt  INICIAR-EXTRAORDINARIA.bat  INICIAR-SERVIDOR.bat  INICIAR-SITE.bat  LEIA-PRIMEIRO.txt  LINK-UNIFICADO.txt  LINKS-DE-ACESSO.txt  README.md  RESULTADO-FINAL-5-OPCOES.md  RESUMO-EXECUTIVO-FINAL.md  _config.yml  (+29 more)
languages/cpp/: CMakeLists.txt  run_stats.bat  stats.cpp
(+251 files in other folders)
